Fix bottom alignment of aside and footer

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -46,7 +46,7 @@ footer {
   min-height: auto;
   clear: both;
   position: absolute;
-  bottom: -1px;
+  bottom: 0px;
   width: 100%;
   .make-row(0);
 
